# p2c

./: .gitignore  CMakeLists.txt  README.md  buildall.sh  buildgui.sh
doc/: CMakeLists.txt  Doxyfile.cmake
gui/: .electron-builder.config.js  .gitignore  pnpm-lock.yaml
include/: ASTNode.h  driver.h  logging.h
p2c_console/: package.json  update-parser.sh
src/: driver.cpp  lexer.l  libparser.cpp  logging.cpp  main.cpp  parser.y
src/parser/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  driver.cpp  driver.h  lexer.l  magic_enum.hpp  parser.y  scanner.h  symtable.cpp  symtable.h  types.h
tests/: mergesort.p  test.p  test_example.cpp  test_lexer.cpp  test_yacc.cpp
tests/parser_cases/: array_failed1.p  array_failed2.p  array_failed3.p  array_failed4.p  array_success1.p  comment_failed1.p  comment_failed2.p  comment_success1.p  comment_success2.p  for_failed1.p  for_failed2.p  for_failed3.p  for_success1.p  for_success2.p  for_success3.p  function_failed1.p  function_failed2.p  function_failed3.p  function_failed4.p  function_success1.p  function_success2.p  if_failed1.p  if_failed2.p  if_failed3.p  if_failed4.p  if_failed5.p  if_failed6.p  if_success1.p  if_success2.p  io_failed1.p  io_failed2.p  io_failed3.p  io_failed4.p  io_failed5.p  io_success1.p  io_success2.p  parameter_failed1.p  parameter_failed2.p  parameter_failed3.p  parameter_failed4.p  (+21 more)
